--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>s
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script>
+      window.RAZORPAY_KEY_ID = "rzp_test_8oS4X3Wxm2N3fk";  // Replace with your actual Razorpay Key ID
+    </script>
   </body>
 </html>
